# rapidquery

./: Cargo.toml  Makefile  README.md  a.py  benchmarks.py  pyproject.toml  rustfmt.toml
.github/workflows/: CI.yml  publish.yml  test.yml
rapidquery/: __init__.py  _lib.pyi
src/: backend.rs  common.rs  foreign_key.rs  index.rs  lib.rs  macros.rs  parameters.rs  typeref.rs
src/adaptation/: common.rs  deserialize.rs  mod.rs  serialize.rs
src/column/: convert.rs  mod.rs  types.rs
src/expression/: expr.rs  function.rs  mod.rs
src/index/: index.rs
src/query/: case.rs  delete.rs  insert.rs  mod.rs  on_conflict.rs  order.rs  select.rs  update.rs  window.rs
src/table/: aliased.rs  mod.rs  ops.rs  table.rs
tests/: test_adaptedvalue.py  test_adapting.py  test_column.py  test_edgecases.py  test_expression.py  test_table.py
