[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "rapidquery"
requires-python = ">=3.8"
keywords = ["SQL", "dynamic-sql", "sql-builder", "rapidorm", "seaql", "pypika", "orm", "rapidquery"]
authors = [
  {name = "awolverp", email = "awolverp@gmail.com"}
]

classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Typing :: Typed",
]

dynamic = [
    'description',
    'license',
    'readme',
    'version'
]
dependencies = []

[project.urls]
Homepage = 'https://github.com/awolverp/rapidquery'

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rapidquery._lib"

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "pytest>=8.3.5",
]
